--- a/src/app/home/components/header/popover/popover.component.scss
+++ b/src/app/home/components/header/popover/popover.component.scss
@@ -1,6 +1,10 @@
 .item-divider {
     border-bottom: 1px solid var(--ion-color-light-tint);
   }
+
+ion-card{
+  margin: 0;
+}
   
   ion-card-content p:hover {
     text-decoration: underline;
